--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.8",
     "framer-motion": "^12.23.22",
     "icons": "^1.0.0",
@@ -40,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/user-event": "^14.6.1"
   }
 }
